# ocaml-of-json-schema

./: .gitignore  README.md  flake.nix  ocaml-of-json-schema.js
.github/workflows/: test.yml
example/: README.md  run-test.sh
example/ocaml/: dune-project
example/rust/: Cargo.toml
example/rust/src/: lib.rs  tester.rs
