
[package]
name = "ocaml-of-json-schema"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/tester.rs"
name = "ocaml-of-json-schema-tester"

[[bin]]
path = "src/schema.rs"
name = "ocaml-of-json-schema-schema"

[dependencies]
rand = "0.8.5"
rand_derive2 = "0.1.21"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
